--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -16,4 +16,14 @@
 	  </attr>
 	  <attr name="offset" format="dimension" />
 	</declare-styleable>
+	<declare-styleable name="DownloadPercentView">
+		<attr name="radius" format="dimension"/>
+		<attr name="notBeginImg" format="string"/>
+		<attr name="waitImg" format="string"/>
+		<attr name="pausedImg" format="string"/>
+		<attr name="finishedImg" format="string"/>
+		<attr name="strokeWidth" format="dimension"/>
+		<attr name="circleColor" format="color"/>
+		<attr name="ringColor" format="color"/>
+	</declare-styleable>
 </resources>
