--- a/app/src/main/res/layout/item_download_record.xml
+++ b/app/src/main/res/layout/item_download_record.xml
@@ -3,59 +3,84 @@
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:paddingTop="12dp"
-    android:paddingBottom="12dp"
     android:gravity="center_vertical"
-    android:descendantFocusability="blocksDescendants" >
+    android:orientation="horizontal">
 
-    <com.xman.downloadmanagedemo.DownloadPercentView
-        android:id="@+id/status_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        custom:notBeginImg="@drawable/ic_no_download"
-        custom:waitImg="@drawable/ic_wait"
-        custom:pausedImg="@drawable/ic_pause"
-        custom:finishedImg="@drawable/ic_finished"
-        custom:strokeWidth="2dp"
-        custom:circleColor="#bdbdbd"
-        custom:radius="16dp"
-        custom:ringColor="#52ce90"/>
+    <com.xman.downloadmanagedemo.widget.SwipeMenuLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical"
-        android:gravity="center_vertical"
-        android:layout_marginRight="12dip">
-        <RelativeLayout
+        <LinearLayout
+            android:id="@+id/item_download_content"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
-            <TextView
-                android:id="@+id/name"
+
+            <com.xman.downloadmanagedemo.DownloadPercentView
+                android:id="@+id/item_download_status_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:singleLine="true"
-                android:text="奇趣营" />
-            <TextView
-                android:id="@+id/download_percent"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="12dp"
+                custom:circleColor="#bdbdbd"
+                custom:finishedImg="@drawable/ic_finished"
+                custom:notBeginImg="@drawable/ic_no_download"
+                custom:pausedImg="@drawable/ic_pause"
+                custom:radius="16dp"
+                custom:ringColor="#52ce90"
+                custom:strokeWidth="2dp"
+                custom:waitImg="@drawable/ic_wait" />
+
+            <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:singleLine="true"
-                android:text="已下载0%" />
-        </RelativeLayout>
+                android:layout_height="fill_parent"
+                android:layout_marginRight="12dip"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
-        <ProgressBar
-            android:id="@+id/progressbar"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="2dp"
-            android:layout_marginTop="8dp"
-            android:max="100"/>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-    </LinearLayout>
+                    <TextView
+                        android:id="@+id/item_download_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:maxLines="1"
+                        android:text="奇趣营" />
 
+                    <TextView
+                        android:id="@+id/item_download_percent_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:maxLines="1"
+                        android:text="已下载0%" />
+                </RelativeLayout>
+
+                <ProgressBar
+                    android:id="@+id/item_download_progressbar"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="2dp"
+                    android:layout_marginTop="8dp"
+                    android:max="100" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/item_download_delete"
+            android:layout_width="60dp"
+            android:layout_height="match_parent"
+            android:background="#ff0000"
+            android:gravity="center"
+            android:text="删除"
+            android:textColor="@android:color/white" />
+
+
+    </com.xman.downloadmanagedemo.widget.SwipeMenuLayout>
 </LinearLayout>
