--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -26,4 +26,9 @@
 		<attr name="circleColor" format="color"/>
 		<attr name="ringColor" format="color"/>
 	</declare-styleable>
+	<declare-styleable name="SwipeMenuLayout">
+		<attr name="swipeEnable" format="boolean"/>
+		<attr name="ios" format="boolean"/>
+		<attr name="leftSwipe" format="boolean"/>
+	</declare-styleable>
 </resources>
